---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/reference/pulse/defcal.qasm
expect-lex: Todo
--- source ---

defcal x $0 {}
defcal measure $0 -> bit {Outer {nested} outer}
defcal rz(angle[20] theta) q {£$&£*(")}
defcal rz(pi / 2) q {Symbolic expression.}
--- lexer ---
ok: false
errors: 1
[0] Whitespace "\n" @0..1
[1] Ident "defcal" @1..7
[2] Whitespace " " @7..8
[3] Ident "x" @8..9
[4] Whitespace " " @9..10
[5] HardwareIdent "$0" @10..12
[6] Whitespace " " @12..13
[7] OpenBrace "{" @13..14
[8] CloseBrace "}" @14..15
[9] Whitespace "\n" @15..16
[10] Ident "defcal" @16..22
[11] Whitespace " " @22..23
[12] Ident "measure" @23..30
[13] Whitespace " " @30..31
[14] HardwareIdent "$0" @31..33
[15] Whitespace " " @33..34
[16] Minus "-" @34..35
[17] Gt ">" @35..36
[18] Whitespace " " @36..37
[19] Ident "bit" @37..40
[20] Whitespace " " @40..41
[21] OpenBrace "{" @41..42
[22] Ident "Outer" @42..47
[23] Whitespace " " @47..48
[24] OpenBrace "{" @48..49
[25] Ident "nested" @49..55
[26] CloseBrace "}" @55..56
[27] Whitespace " " @56..57
[28] Ident "outer" @57..62
[29] CloseBrace "}" @62..63
[30] Whitespace "\n" @63..64
[31] Ident "defcal" @64..70
[32] Whitespace " " @70..71
[33] Ident "rz" @71..73
[34] OpenParen "(" @73..74
[35] Ident "angle" @74..79
[36] OpenBracket "[" @79..80
[37] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "20" @80..82
[38] CloseBracket "]" @82..83
[39] Whitespace " " @83..84
[40] Ident "theta" @84..89
[41] CloseParen ")" @89..90
[42] Whitespace " " @90..91
[43] Ident "q" @91..92
[44] Whitespace " " @92..93
[45] OpenBrace "{" @93..94
[46] Unknown "£" @94..96
[47] Dollar "$" @96..97
[48] And "&" @97..98
[49] Unknown "£" @98..100
[50] Star "*" @100..101
[51] OpenParen "(" @101..102
[52] Literal { kind: Str { terminated: false }, suffix_start: 47 } "")}\ndefcal rz(pi / 2) q {Symbolic expression.}\n" @102..149
